# asset-dashboard-tauri

./: .gitignore  CHANGELOG.md  PERF.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
bench/: baseline.json
scripts/: patch_icon.py
src/: index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: sync_check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sync_check.rs
src/components/: CategorySettingsDialog.tsx  ChannelInfoDialog.tsx  Dashboard.tsx  DbConfigDialog.tsx  EditTransactionDialog.tsx  HistoryChart.tsx  HoldingsTable.tsx  PriceUpdateDialog.tsx  RebalanceAssistant.tsx  RetirementDialog.tsx  RetirementProgressPanel.tsx  TransactionDialog.tsx  TwrPanel.tsx
src/components/ui/: select.tsx
src/lib/: calc.test.ts  calc.ts  category.test.ts  dateUtils.ts  demoData.ts  features.test.ts  initialData.ts  perf.bench.ts  robustness.test.ts  store.test.ts  store.ts  types.ts
src/lib/__snapshots__/: calc.test.ts.snap
